--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Lab 1: Job Aide</title>
-<link href="jobaid.css" rel="stylesheet">
+<link href="css/jobaid.css" rel="stylesheet">
 </head>
 
 <body>
