--- a/lab1/index.html
+++ b/lab1/index.html
@@ -406,7 +406,7 @@
 
 			<div class="stepDescription">
 				<p>Once done with the first dog kennel cleaning, make sure to repeat all the above steps until all kennels are clean.  Always start by cleaning the quarantine kennels first and then move on to the regular dog kennels. </p> 
-				
+				<p> For more information about the Indiana County Humane Society go to their website. <a href="https://incohumanesociety.com/"> Click Here.</a> </p>
 			</div>
 		
 			<div class="stepImage">
