--- a/lab2/index.html
+++ b/lab2/index.html
@@ -25,6 +25,13 @@
  			 margin: 0;
 			 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 			}
+		#logo {
+			align:left;
+			border-radius:8px 8px 8px 8px;
+			border-style:solid;
+			border-color:#CF3339; 
+			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+		}
 		
 	</style>
 </head>
@@ -32,7 +39,7 @@
 <body>
 		
 	<div style="padding-left:20px">
-		<img src="img/ICHSlogo.PNG" alt="ICHS logo" width="234" height="84" align="left"/>
+		<img id="logo" src="img/ICHSlogo.PNG" alt="ICHS logo" width="234" height="84" align="left" />
 	</div>
 	
 <div id="wrapper">
