--- a/lab6/page5.html
+++ b/lab6/page5.html
@@ -98,9 +98,9 @@
 						<div class="stepImage">
 							<img src="img/shelterlayouthotspot.PNG" usemap="#map" alt="Shelter layout." width="100%" style="border-radius: 5px 5px 0px 0px"/>
 								<map name="map">
-   									<area shape="circle" coords="325,897,10" href="entrance.htm" alt="entrance" title="entrance">
-  									<area shape="circle" coords="306,361,10" href="entrance.htm" alt="dogkennelfront" title="dogkennelfront">
-    								<area shape="circle" coords="304,293,10" href="entrance.htm" alt="dogkennelback" title="dogkennelback">
+   									<area shape="circle" coords="325,897,10" href="https://sricks33.github.io/lab6/entrance.html" alt="entrance" title="entrance">
+  									<area shape="circle" coords="306,361,10" href="https://sricks33.github.io/lab6/entrance.html" alt="dogkennelfront" title="dogkennelfront">
+    								<area shape="circle" coords="304,293,10" href="https://sricks33.github.io/lab6/entrance.html" alt="dogkennelback" title="dogkennelback">
 								</map>
 
 							
