--- a/ichssheltertraining/index.html
+++ b/ichssheltertraining/index.html
@@ -45,8 +45,8 @@
 			<ul id="topNav">
             	<li><a href="index.html">Home</a></li>
 				<li><a href="page5b.html">Shelter Layout</a></li>              	
-           		<li><a href="page3.html">Dog Tream Training</a></li>
-				<li><a href="page3a.html">Cat Tream Training</a></li>
+           		<li><a href="page3.html">Dog Team Training</a></li>
+				<li><a href="page3a.html">Cat Team Training</a></li>
 				<li><a href="page3b.html">Pet Adoption Training</a></li>
 			
        		</ul>
